*Empty MediaWiki Message*

--- a/Umusigiti_wa_Karagoz.mw
+++ b/Umusigiti_wa_Karagoz.mw
@@ -1,4 +1,5 @@
 [[File:Karadjozbeg.png|thumb|250px|<font color="grey">Umusigiti wa Karagoz</font>]]
+[[File:Mostar Karadjoz Beg Moschee.jpg|thumb|250px|<font color="grey">Umusigiti wa Karagoz</font>]]
 
 '''Umusigiti wa Karagoz''' (izina mu [[kinyabosiniya]] na [[kinyakorowasi]] : ''Karađozbegova džamija'' ; izina mu [[kinyaseribiya]] : ''Карађозбегова џамија'' ; izina mu [[gituruki]] : ''Karagöz Mehmed Bey Camii'' )  ni [[umusigiti]] i [[Mostar]] muri [[Bosiniya na Herizegovina]].
 
