*Empty MediaWiki Message*

--- a/Umusigiti_wa_Karagoz.mw
+++ b/Umusigiti_wa_Karagoz.mw
@@ -3,6 +3,8 @@
 
 '''Umusigiti wa Karagoz''' (izina mu [[kinyabosiniya]] na [[kinyakorowasi]] : ''Karađozbegova džamija'' ; izina mu [[kinyaseribiya]] : ''Карађозбегова џамија'' ; izina mu [[gituruki]] : ''Karagöz Mehmed Bey Camii'' )  ni [[umusigiti]] i [[Mostar]] muri [[Bosiniya na Herizegovina]].
 
+[[File:Karagoez-davul-Hacivat-zurna.jpg|thumb|left|250px|<font color="grey">Karagoz na Hacivat</font>]]
+
 [[Category:Imisigiti]]
 [[Category:Bosiniya na Herizegovina]]
 
