--- a/Buruneyi.mw
+++ b/Buruneyi.mw
@@ -3,6 +3,7 @@
 
 '''Buruneyi''' cyangwa '''Buruneyi Darusalamu''' (izina mu [[kimalayi]] : ''Negara Brunei Darussalam'' ; izina mu [[kijavani]] : '''بروني دارالسلام''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Buruneyi]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
