*Empty MediaWiki Message*

--- a/Kanada.mw
+++ b/Kanada.mw
@@ -36,7 +36,7 @@ Kanada iri mu miryango nka [[G8]] (umuryango uhuza ibihugu 8 bikize ku isi), [[G
 == ==
 Kanada ni kimwe mu bihugu bikize kandi bikomeye ku isi. Ubukungu bwayo bushingiye cyane cyane ku mutungo kamere n’ubuhahirane na Leta Zunze Ubumwe z’Amerika  bituranye. Kanada ifite amashyamba arimo ibiti bikenerwa cyane, ikungahaye kandi kuri [[peteroli]] na [[gaze]]. Hari amabuye y’agaciro atandukanye kandi akenerwa nka zinc, uranium, n’ayandi.
 
-
+[[Category:Kanada]]
 [[Category:Amerika ya Ruguru]]
 [[Category:Ibihugu]]
 
