--- a/Itsembabwoko_ry’u_Rwanda_ry’1994.mw
+++ b/Itsembabwoko_ry’u_Rwanda_ry’1994.mw
@@ -36,6 +36,7 @@ Ijambo genocide rimaze imyaka 62. Ryahimbwe mu 1994 na Raphael Lemkin, Umuyahudi
 
 == External links ==
 *http://rwandinfo.com/kinya/category/jenoside/ 
+*[http://www.yale.edu/gsp/kinyarwanda/index.html www.yale.edu Umushinga kw’Itsembambatsemba ryo mu Rwanda]
 
 [[Category:Itsembabwoko ry’u Rwanda ry’1994]] 
 
