*Empty MediaWiki Message*

--- a/Kaminuza_nkuru_y’u_Rwanda.mw
+++ b/Kaminuza_nkuru_y’u_Rwanda.mw
@@ -52,7 +52,7 @@ Kaminuza y’u Rwanda ifite amashami 9, ari yo:
 # Ishami ry’indimi ritegura abanyeshuli (''Foundation Language Skills'') 
 # Ishuli ry’ubuzima (''Public Health'')
 
-[[Category:Uburezi]] 
+[[Category:Kaminuza]] 
 [[Category:Rwanda]] 
 
 [[en:National University of Rwanda]]
