--- a/Umusigiti_w’Évry.mw
+++ b/Umusigiti_w’Évry.mw
@@ -1,6 +1,6 @@
 [[File:La Grande Mosque Evry.jpg|thumb|250px|<font color="grey">Umusigiti w’Évry</font>]]
 
-'''Umusigiti w’Évry''' (izina mu [[gifaransa]] : ''Mosquée d'Évry-Courcouronnes'') ni [[umusigiti]] i [[Évry]] muri [[Ubufaransa]].
+'''Umusigiti w’Évry''' (izina mu [[gifaransa]] : ''Mosquée d'Évry-Courcouronnes'') ni [[umusigiti]] i [[Évry]] mu [[Bufaransa]].
 
 [[Category:Imisigiti]]
 [[Category:Ubufaransa]]
