--- a/Ubufaransa.mw
+++ b/Ubufaransa.mw
@@ -3,7 +3,7 @@
 
 '''Ubufaransa''' (izina mu [[gifaransa]] : ''France'' cyangwa ''République française'' ) n’[[igihugu]] mu [[Burayi]]. [[Umurwa]] mukuru w’Ubufaransa witwa [[Paris]].
 
-[[Category:Ubufaransa]]
+[[Category:Ubufaransa| ]]
 [[Category:Uburayi]]
 [[Category:Ibihugu]] 
 
