--- a/Umusigiti_wa_Paris.mw
+++ b/Umusigiti_wa_Paris.mw
@@ -1,6 +1,6 @@
 [[File:GD-FR-Paris-Mosquée012.JPG|thumb|250px|<font color="grey">Umusigiti wa Paris</font>]]
 
-'''Umusigiti wa Paris''' (izina mu [[gifaransa]] : ''Grande Mosquée de Paris '') ni [[umusigiti]] i [[Paris]] muri [[Ubufaransa]].
+'''Umusigiti wa Paris''' (izina mu [[gifaransa]] : ''Grande Mosquée de Paris '') ni [[umusigiti]] i [[Paris]] mu [[Bufaransa]].
 
 [[Category:Imisigiti]]
 [[Category:Ubufaransa]]
