--- a/Umusigiti_wa_Palayam_Juma.mw
+++ b/Umusigiti_wa_Palayam_Juma.mw
@@ -1,6 +1,6 @@
 [[File:Palayam Mosque.jpg|thumb|250px|<font color="grey">Umusigiti wa Palayam Juma</font>]]
 
-'''Umusigiti wa Palayam Juma''' (izina mu [[kimalayalamu]] : '''പാളയം ജുമാമസ്ജിദ്''') ni [[umusigiti]] i [[Trivandrum]] muri [[Ubuhinde]].
+'''Umusigiti wa Palayam Juma''' (izina mu [[kimalayalamu]] : '''പാളയം ജുമാമസ്ജിദ്''') ni [[umusigiti]] i [[Trivandrum]] mu [[Buhinde]].
 
 [[Category:Imisigiti]]
 [[Category:Ubuhinde]]
