--- a/Umusigiti_wa_Sidi_Bashir.mw
+++ b/Umusigiti_wa_Sidi_Bashir.mw
@@ -1,6 +1,6 @@
 [[File:Shakingminarets.jpg|thumb|250px|<font color="grey">Umusigiti wa Sidi Bashir</font>]]
 
-'''Umusigiti wa Sidi Bashir''' (izina mu [[kigujarati]] : '''ઝૂલતા મિનારા''') ni [[umusigiti]] i [[Ahmedabad]] muri [[Ubuhinde]].
+'''Umusigiti wa Sidi Bashir''' (izina mu [[kigujarati]] : '''ઝૂલતા મિનારા''') ni [[umusigiti]] i [[Ahmedabad]] mu [[Buhinde]].
 
 [[Category:Imisigiti]]
 [[Category:Ubuhinde]]
