*Empty MediaWiki Message*

--- a/Umusigiti_wa_Tipu_Sultan.mw
+++ b/Umusigiti_wa_Tipu_Sultan.mw
@@ -1,6 +1,6 @@
 [[File:Kolkata Tipu Sultan's Mosque3.jpg|thumb|250px|<font color="grey">Umusigiti wa Tipu Sultan</font>]]
 
-'''Umusigiti wa Tipu Sultan'''  ni [[umusigiti]] i [[Kolkata]] muri [[Ubuhinde]].
+'''Umusigiti wa Tipu Sultan'''  ni [[umusigiti]] i [[Kolkata]] mu [[Buhinde]].
 
 [[Category:Imisigiti]]
 [[Category:Ubuhinde]]
