--- a/Osasco.mw
+++ b/Osasco.mw
@@ -13,6 +13,7 @@
 * [http://commons.wikimedia.org/wiki/Category:Osasco Commons:Osasco]
 
 [[Category:Burezile]]
+[[Category:Imijyi]] 
 
 [[ab:Озаску]]
 [[ace:Osasco]]
