*Empty MediaWiki Message*

--- a/Umusigiti_wa_Isfahan.mw
+++ b/Umusigiti_wa_Isfahan.mw
@@ -5,7 +5,7 @@
 '''Umusigiti wa Isfahan''' (izina mu [[kinyaperisi]] : '''مسجد جامع اصفهان ''') ni [[umusigiti]] i [[Isfahan]] muri [[Irani]].
 
 [[Category:Imisigiti]]
-[[Category:Indonesiya]]
+[[Category:Irani]]
 
 [[fa:مسجد جامع اصفهان]]
 [[fr:Grande mosquée d'Ispahan]]
