--- a/Irake.mw
+++ b/Irake.mw
@@ -3,6 +3,7 @@
 
 '''Irake''' (izina mu [[cyarabu]] : '''العراق ''' cyangwa '''جمهورية العراق ''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Irake]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
