*Empty MediaWiki Message*

--- a/Isirayeli.mw
+++ b/Isirayeli.mw
@@ -3,7 +3,7 @@
 
 '''Isirayeli''' cyangwa '''Isiraheli''' (izina mu [[giheburayo]] : '''יִשְׂרָאֵל‎‎''' ) n’[[igihugu]] muri [[Aziya]]. [[Umurwa]] mukuru w’Isirayeli witwa [[Tel Aviv]] (''de jure'') na [[Yerusalemu]] (''de facto'').
 
-[[Category:Isirayeli]]
+[[Category:Isirayeli| ]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
