--- a/Yorudani.mw
+++ b/Yorudani.mw
@@ -3,7 +3,7 @@
 
 '''Aligeriya''' (izina mu [[cyarabu]] : '''المملكة الأردنية الهاشمية''' ; izina mu [[cyongereza]] : ''Jordan'' cyangwa ''Hashemite Kingdom of Jordan'' ) n’[[igihugu]] muri [[Aziya]].
 
-[[Category:Yorudani]]
+[[Category:Yorudani| ]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
