*Empty MediaWiki Message*

--- a/Koweti.mw
+++ b/Koweti.mw
@@ -3,6 +3,7 @@
 
 '''Koweti''' (izina mu [[cyarabu]] : '''دولة الكويت''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Koweti]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
