--- a/Libani.mw
+++ b/Libani.mw
@@ -3,6 +3,7 @@
 
 '''Libani''' (izina mu [[cyarabu]] : '''لُبْنَان‎ ''' cyangwa '''اَلْجُمْهُورِيَّة اَللُّبْنَانِيَّة ''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Libani| ]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
