*Empty MediaWiki Message*

--- a/Moritaniya.mw
+++ b/Moritaniya.mw
@@ -3,6 +3,7 @@
 
 '''Moritaniya''' (izina mu [[cyongereza]] : '''موريتانيا‎ ''' cyangwa '''الجمهورية الإسلامية الموريتانية''') n’[[igihugu]] muri [[Afurika]].
 
+[[Category:Moritaniya]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
