--- a/Moritaniya.mw
+++ b/Moritaniya.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Mauritania.svg|thumb|250px|<font color="grey">Ibendera rya Moritaniya</font>]]
 [[File:Mauritania (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Moritaniya</font>]]
 
-'''Moritaniya''' (izina mu [[cyongereza]] : '''موريتانيا‎ ''' cyangwa '''الجمهورية الإسلامية الموريتانية''') n’[[igihugu]] muri [[Afurika]].
+'''Moritaniya''' (izina mu [[cyarabu]] : '''موريتانيا‎ ''' cyangwa '''الجمهورية الإسلامية الموريتانية''') n’[[igihugu]] muri [[Afurika]].
 
 [[Category:Moritaniya]]
 [[Category:Afurika]]
