--- a/Umusigiti_wa_Chinguetti.mw
+++ b/Umusigiti_wa_Chinguetti.mw
@@ -1,6 +1,6 @@
 [[File:Chinguetti mosquee.jpg|thumb|250px|<font color="grey">Umusigiti wa Chinguetti</font>]]
 
-'''Umusigiti wa Chinguetti''' (izina mu [[cyarabu]] : ''Masjid Jamek'') ni [[umusigiti]] i [[Chinguetti ]] muri [[Moritaniya]].
+'''Umusigiti wa Chinguetti''' (izina mu [[cyarabu]] : '''?''') ni [[umusigiti]] i [[Chinguetti ]] muri [[Moritaniya]].
 
 [[Category:Imisigiti]]
 [[Category:Moritaniya]]
