*Empty MediaWiki Message*

--- a/Maroke.mw
+++ b/Maroke.mw
@@ -3,6 +3,7 @@
 
 '''Maroke''' (izina mu [[cyongereza]] : '''المملكة المغربية ''' ; izina mu [[kiberiberi]] : '''ⵜⴰⴳⵍⴷⵉⵜ ⵏ ⵓⵎⵔⵔⵓⴽ ''' ; izina mu [[gifaransa]] : ''Royaume du Maroc'' ) n’[[igihugu]] muri [[Afurika]].
 
+[[Category:Maroke| ]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
