--- a/Umusigiti_wa_Hassan_II.mw
+++ b/Umusigiti_wa_Hassan_II.mw
@@ -1,6 +1,6 @@
 [[File:Morocco Africa Flickr Rosino December 2005 82664690.jpg|thumb|250px|<font color="grey">Umusigiti wa Hassan II</font>]]
 
-'''Umusigiti wa Hassan II''' (izina mu [[cyarabu]] : '''Masjid Jamek''') ni [[umusigiti]] i [[Casablanca]] muri [[Maroke]].
+'''Umusigiti wa Hassan II''' (izina mu [[cyarabu]] : '''مسجد الحسن الثاني‎''') ni [[umusigiti]] i [[Casablanca]] muri [[Maroke]].
 
 [[Category:Imisigiti]]
 [[Category:Maroke]]
