*Empty MediaWiki Message*

--- a/Nuveli_Zelande.mw
+++ b/Nuveli_Zelande.mw
@@ -3,6 +3,7 @@
 
 '''Nuveli Zelande''' (izina mu [[cyongereza]] : ''New Zealand'' ; izina mu [[kimawori]] : ''Aotearoa'' ) n’[[igihugu]] muri [[Oseyaniya]].
 
+[[Category:Nuveli Zelande]]
 [[Category:Oseyaniya]]
 [[Category:Ibihugu]]
 
