*Empty MediaWiki Message*

--- a/Nijeriya.mw
+++ b/Nijeriya.mw
@@ -5,6 +5,7 @@
 
 Indimi nkuru za Nijeriya ni [[icyigbo]], [[ikiyoruba]], [[igihawusa]], n’[[icyongereza]].
 
+[[Category:Nijeriya]]
 [[Category:Afurika]]
 [[Category:Ibihugu]] 
 
