--- a/Umusigiti_w’Abuja.mw
+++ b/Umusigiti_w’Abuja.mw
@@ -1,6 +1,6 @@
-[[File:AbujaNationalMosque.jpg|thumb|250px|<font color="grey">Umusigiti wa w’Abuja</font>]]
+[[File:AbujaNationalMosque.jpg|thumb|250px|<font color="grey">Umusigiti w’Abuja</font>]]
 
-'''Umusigiti wa w’Abuja''' (izina mu [[cyongereza]] : ''Abuja National Mosque'') ni [[umusigiti]] i [[Abuja]] muri [[Nijeriya]].
+'''Umusigiti w’Abuja''' (izina mu [[cyongereza]] : ''Abuja National Mosque'') ni [[umusigiti]] i [[Abuja]] muri [[Nijeriya]].
 
 [[Category:Imisigiti]]
 [[Category:Nijeriya]]
