--- a/Umusigiti_mukuru_muri_Kano.mw
+++ b/Umusigiti_mukuru_muri_Kano.mw
@@ -1,5 +1,5 @@
-[[File:Great Mosque Of Kano.jpg|thumb|250px|<font color="grey">Umusigiti mukuru muri Kano</font>]]
-Kanomosque.jpg
+[[File:Kanomosque.jpg|thumb|250px|<font color="grey">Umusigiti mukuru muri Kano</font>]]
+
 '''Umusigiti mukuru muri Kano''' (izina mu [[cyongereza]] : ''Great Mosque of Kano'') ni [[umusigiti]] i [[Kano]] muri [[Nijeriya]].
 
 [[Category:Imisigiti]]
