--- a/Omani.mw
+++ b/Omani.mw
@@ -3,6 +3,7 @@
 
 '''Omani''' (izina mu [[cyarabu]] : '''عمان‎''' cyangwa '''سلطنة عمان‎ ''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Omani| ]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
