*Empty MediaWiki Message*

--- a/Palestine.mw
+++ b/Palestine.mw
@@ -3,6 +3,7 @@
 
 '''Palestine''' (izina mu [[cyarabu]] : '''فلسطين''' cyangwa '''دولة فلسطين‎''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Palestine| ]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
