--- a/Umusigiti_wa_Qubbat_As-Sakhrah.mw
+++ b/Umusigiti_wa_Qubbat_As-Sakhrah.mw
@@ -1,5 +1,5 @@
 [[File:Temple Mount.JPG|thumb|250px|<font color="grey">Umusigiti wa Qubbat As-Sakhrah</font>]]
-[[File:Dome of the rock close.jpg|thumb|250px|<font color="grey">Umusigiti wa Kocatepe</font>]]
+[[File:Dome of the rock close.jpg|thumb|250px|<font color="grey">Umusigiti wa Qubbat As-Sakhrah</font>]]
 
 '''Umusigiti wa Qubbat As-Sakhrah''' (izina mu [[cyarabu]] : '''‏مسجد قبة الصخرة‎‎''') ni [[umusigiti]] i [[Yerusalemu]] muri [[Palestine]].
 
