*Empty MediaWiki Message*

--- a/Umusigiti_mukuru_muri_Gaza.mw
+++ b/Umusigiti_mukuru_muri_Gaza.mw
@@ -3,7 +3,7 @@
 '''Umusigiti mukuru ''' (izina mu [[cyarabu]] : '''‏جامع غزة الكبير‎‎‎‎''') ni [[umusigiti]] i [[Gaza]] muri [[Palestine]].
 
 [[Category:Imisigiti]]
-[[Category:Pakisitani]]
+[[Category:Palestine]]
 
 [[ar:المسجد العمري الكبير (غزة)]]
 [[de:Große Moschee von Gaza]]
