--- a/Uburusiya.mw
+++ b/Uburusiya.mw
@@ -1,9 +1,11 @@
 [[File:Flag of Russia.svg|thumb|250px|<font color="grey">Ibendera ry’Uburusiya</font>]]
 [[File:Russian Federation (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita y’Uburusiya</font>]]
 
-'''Uburusiya''' (izina mu [[kirusiya]] : ''Россия'' cyangwa ''Российская Федерация'' ) n’[[igihugu]] muri [[Aziya]].
+'''Uburusiya''' (izina mu [[kirusiya]] : ''Россия'' cyangwa ''Российская Федерация'' ) n’[[igihugu]] mu [[Burayi]] na muri [[Aziya]] 
 
-[[Category:Afurika]]
+[[Category:Uburusiya]]
+[[Category:Uburayi]]
+[[Category:Azia]]
 [[Category:Ibihugu]]
 
 [[ab:Урыстәыла]]
