*Empty MediaWiki Message*

--- a/Seribiya.mw
+++ b/Seribiya.mw
@@ -3,6 +3,7 @@
 
 '''Seribiya''' (izina mu [[kinyaseribiya]] : ''Република Србија'' ) n’[[igihugu]] mu [[Burayi]].
 
+[[Category:Seribiya| ]]
 [[Category:Uburayi]]
 [[Category:Ibihugu]]
 
