--- a/Singapore.mw
+++ b/Singapore.mw
@@ -3,6 +3,7 @@
 
 '''Singapore''' (izina mu [[cyongereza]] : ''Singapore'' cyangwa ''Republic of Singapore'' ; izina mu [[kimalayi]] : ''Singapura'' cyangwa ''Republik Singapura'' ; izina mu [[gishinwa]] : '''新加坡''' cyangwa '''新加坡共和国''' ; izina mu [[gitamili]] : '''சிங்கப்பூர்''' cyangwa '''சிங்கப்பூர் குடியரச''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Singapore| ]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
