*Empty MediaWiki Message*

--- a/Curitiba.mw
+++ b/Curitiba.mw
@@ -3,7 +3,7 @@
 
 
 
-'''Curitiba''' [kuɾi'tʃibɐ] ni umujyi w'u [[Brazil]].
+'''Curitiba''' [kuɾi'tʃibɐ] ni umujyi w'u [[Burezile]].
 
 == Links ==
 
