--- a/Curitiba.mw
+++ b/Curitiba.mw
@@ -12,7 +12,7 @@
 * http://www.curitiba-brazil.com 
 * [http://commons.wikimedia.org/wiki/Category:Curitiba Commons:Curitiba]
 
-[[Category:Amerika]] 
+[[Category:Burezile]] 
 
 [[ab:Куритиба]]
 [[af:Curitiba]]
