*Empty MediaWiki Message*

--- a/Ikigori.mw
+++ b/Ikigori.mw
@@ -6,6 +6,7 @@ Abahinzi bo mu murenge wa Gashali ho mu Karere ka Karongi mu ntara y’iburenger
 
 [[File:Corncobs.jpg|thumb|250px|left|<font color="green">Ibigori</font>]]
 
+[[Category:Ibigori]]
 [[Category:Ibimera]]
 [[Category:Ubuhinzi]]
 
