*Empty MediaWiki Message*

--- a/Somaliya.mw
+++ b/Somaliya.mw
@@ -3,6 +3,7 @@
 
 '''Somaliya''' (izina mu [[gisomali]] : ''Soomaaliya'' cyangwa ''Jamhuuriyadda Soomaaliya'' ; izina mu [[cyarabu]] : '''الصومال''' cyangwa '''جمهورية الصومال‎ ''' ) n’[[igihugu]] muri [[Afurika]].
 
+[[Category:Somaliya| ]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
