*Empty MediaWiki Message*

--- a/Koreya_y’Amajyaruguru.mw
+++ b/Koreya_y’Amajyaruguru.mw
@@ -3,6 +3,7 @@
 
 '''Koreya y’Amajyaruguru''' cyangwa '''Koreya ya Ruguru''' (izina mu [[gikoreya]] : '''조선민주주의인민공화국''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Koreya y’Amajyaruguru| ]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
