*Empty MediaWiki Message*

--- a/Koreya_y’Amajyepfo.mw
+++ b/Koreya_y’Amajyepfo.mw
@@ -3,6 +3,7 @@
 
 '''Koreya y’Amajyepfo''' cyangwa '''Koreya y'Epfo''' (izina mu [[gikoreya]] : '''대한민국''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Koreya y’Amajyepfo| ]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
