--- a/Siri_Lanka.mw
+++ b/Siri_Lanka.mw
@@ -3,6 +3,7 @@
 
 '''Siri Lanka''' (izina mu [[kinyasinali]] : '''ශ්‍රී ලංකා''' cyangwa '''ශ්‍රී ලංකා ප්‍රජාතාන්ත්‍රික සමාජවාදී ජනරජය''' ; izina mu [[gitamili]] : '''இலங்கை''' cyangwa '''இலங்கை ஜனநாயக சமத்துவ குடியரசு''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Siri Lanka| ]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
