--- a/Sudani.mw
+++ b/Sudani.mw
@@ -3,6 +3,7 @@
 
 '''Sudani''' (izina mu [[cyarabu]] : '''جمهورية السودان''' ; izina mu [[cyongereza]] : ''Republic of Sudan'' ) n’[[igihugu]] muri [[Afurika]].
 
+[[Category:Sudani| ]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
