*Empty MediaWiki Message*

--- a/Umusigiti_wa_Hajja_Soad.mw
+++ b/Umusigiti_wa_Hajja_Soad.mw
@@ -1,6 +1,6 @@
-[[File:Hajja Soad mosque.jpg|thumb|250px|<font color="grey">Umusigiti wa Kocatepe</font>]]
+[[File:Hajja Soad mosque.jpg|thumb|250px|<font color="grey">Umusigiti wa Hajja Soad</font>]]
 
-'''Umusigiti wa Kocatepe''' (izina mu [[cyarabu]] : '''?''') ni [[umusigiti]] i [[Khartoum]] muri [[Sudani]].
+'''Umusigiti wa Hajja Soad''' (izina mu [[cyarabu]] : '''?''') ni [[umusigiti]] i [[Khartoum]] muri [[Sudani]].
 
 [[Category:Imisigiti]]
 [[Category:Sudani]]
