*Empty MediaWiki Message*

--- a/Siriya.mw
+++ b/Siriya.mw
@@ -3,6 +3,7 @@
 
 '''Siriya''' (izina mu [[cyarabu]] : '''سورية‎ ''' cyangwa '''الجمهورية العربية السورية''') n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Siriya| ]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
