*Empty MediaWiki Message*

--- a/Tayiwani.mw
+++ b/Tayiwani.mw
@@ -3,6 +3,7 @@
 
 '''Tayiwani''' (izina mu [[gishinwa]] : '''中華民國''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Tayiwani| ]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
