--- a/Tayiwani.mw
+++ b/Tayiwani.mw
@@ -1,7 +1,7 @@
 [[File:Flag of the Republic of China.svg|thumb|250px|<font color="grey">Ibendera rya Tayiwani</font>]]
 [[File:Locator map of the ROC Taiwan.svg|thumb|250px|<font color="grey">Ikarita ya Tayiwani</font>]]
 
-'''Tayiwani''' (izina mu [[gishinwa]] : '''中華民國''' ) n’[[igihugu]] muri [[Aziya]].
+'''Tayiwani''' (izina mu [[gishinwa]] : '''中華民國''' ) n’[[igihugu]] muri [[Aziya]]. [[Umurwa]] mukuru wa Tayiwani witwa [[Tayipeyi]].
 
 [[Category:Tayiwani| ]]
 [[Category:Aziya]]
