*Empty MediaWiki Message*

--- a/Tayilande.mw
+++ b/Tayilande.mw
@@ -3,6 +3,7 @@
 
 '''Tayilande''' (izina mu [[gitayi]] : '''ราชอาณาจักรไทย''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Tayilande| ]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
