--- a/Umusigiti_wa_Baan_Haw.mw
+++ b/Umusigiti_wa_Baan_Haw.mw
@@ -1,4 +1,4 @@
-[[File:Ban Hoe Mosque.JPG|thumb|250px|<font color="grey">Umusigiti wa Baan Haw</font>]]
+[[File:Ban Hoe Mosque2.jpg|thumb|250px|<font color="grey">Umusigiti wa Baan Haw</font>]]
 
 '''Umusigiti wa Baan Haw''' (izina mu [[gitayi]] : '''มัสยิดบ้านฮ่อ''' cyangwa '''มัสยิดเฮดายาตูลอิสลามบ้านฮ่อ''' ; izina mu [[gishinwa]] : '''王和清真寺''' ) ni [[umusigiti]] i [[Chiang Mai]] muri [[Tayiwani]].
 
