--- a/Nyarabu_Zunze_Ubumwe.mw
+++ b/Nyarabu_Zunze_Ubumwe.mw
@@ -3,6 +3,7 @@
 
 '''Nyarabu Zunze Ubumwe''' cyangwa '''Repubulika Nyarabu Zunze Ubumwe''' (izina mu [[cyarabu]] : '''دولة الإمارات العربية المتحدة''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Nyarabu Zunze Ubumwe| ]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
