*Empty MediaWiki Message*

--- a/Umusigiti_wa_Maryam.mw
+++ b/Umusigiti_wa_Maryam.mw
@@ -1,4 +1,4 @@
-[[File:Tucson mosque2.JPG|thumb|250px|<font color="grey">Umusigiti wa Maryam</font>]]
+[[File:Mosque Maryam.jpg|thumb|250px|<font color="grey">Umusigiti wa Maryam</font>]]
 
 '''Umusigiti wa Maryam''' (izina mu [[cyongereza]] : ''Mosque Maryam'' ) ni [[umusigiti]] i [[Chicago]] muri [[Leta Zunze Ubumwe z’Amerika]].
 
