*Empty MediaWiki Message*

--- a/Venezuwela.mw
+++ b/Venezuwela.mw
@@ -3,6 +3,7 @@
 
 '''Venezuwela''' (izina mu [[cyesipanyole]] : ''Venezuela'' cyangwa ''República Bolivariana de Venezuela'' ) n’[[igihugu]] muri [[Amerika]].
 
+[[Category:Venezuwela]]
 [[Category:Amerika]]
 [[Category:Ibihugu]]
 
