--- a/Yemeni.mw
+++ b/Yemeni.mw
@@ -3,6 +3,7 @@
 
 '''Yemeni''' (izina mu [[cyarabu]] : '''اليَمَن''' cyangwa '''الجمهورية اليمنية ''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Yemeni]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
