--- a/Tayipeyi.mw
+++ b/Tayipeyi.mw
@@ -1,6 +1,6 @@
 [[File:Taipei montage.png|thumb|250px|<font color="grey">Amafoto y’umujyi wa Tayipeyi</font>]]
 
-Umujyi wa '''Tayipeyi''' (izina mu [[gishinwa]] : '''新加坡''' ) n’[[umurwa]] mukuru wa [[Tayiwani]].
+Umujyi wa '''Tayipeyi''' (izina mu [[gishinwa]] : '''台北市''' ) n’[[umurwa]] mukuru wa [[Tayiwani]].
 
 [[Category:Tayiwani]]
 [[Category:Imirwa]]
