*Empty MediaWiki Message*

--- a/Kazakisitani.mw
+++ b/Kazakisitani.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Kazakhstan.svg|thumb|250px|<font color="grey">Ibendera rya Kazakisitani</font>]]
 [[File:Kazakhstan (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Kazakisitani</font>]]
 
-'''Kazakisitani''' (izina mu [[gikazaki]] : ''Қазақстан'' cyangwa ''Қазақстан Республикасы'' ; izina mu [[kirusiya]] : ''Казахстан '' cyangwa ''Республика Казахстан'' ) n’[[igihugu]] muri [[Aziya]].
+'''Kazakisitani''' (izina mu [[gikazaki]] : ''Қазақстан'' cyangwa ''Қазақстан Республикасы'' ; izina mu [[kirusiya]] : ''Казахстан '' cyangwa ''Республика Казахстан'' ) n’[[igihugu]] muri [[Aziya]]. [[Umurwa]] mukuru wa Kazakisitani witwa [[Astana]].
 
 [[Category:Aziya]]
 [[Category:Ibihugu]]
