--- a/Kazakisitani.mw
+++ b/Kazakisitani.mw
@@ -3,6 +3,7 @@
 
 '''Kazakisitani''' (izina mu [[gikazaki]] : ''Қазақстан'' cyangwa ''Қазақстан Республикасы'' ; izina mu [[kirusiya]] : ''Казахстан '' cyangwa ''Республика Казахстан'' ) n’[[igihugu]] muri [[Aziya]]. [[Umurwa]] mukuru wa Kazakisitani witwa [[Astana]].
 
+[[Category:Kazakisitani| ]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
