--- a/Maroke.mw
+++ b/Maroke.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Morocco.svg|thumb|250px|<font color="grey">Ibendera rya Maroke</font>]]
 [[File:Morocco (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Maroke</font>]]
 
-'''Maroke''' (izina mu [[cyongereza]] : '''المملكة المغربية ''' ; izina mu [[kiberiberi]] : '''ⵜⴰⴳⵍⴷⵉⵜ ⵏ ⵓⵎⵔⵔⵓⴽ ''' ; izina mu [[gifaransa]] : ''Royaume du Maroc'' ) n’[[igihugu]] muri [[Afurika]].
+'''Maroke''' (izina mu [[cyongereza]] : '''المملكة المغربية ''' ; izina mu [[kiberiberi]] : '''ⵜⴰⴳⵍⴷⵉⵜ ⵏ ⵓⵎⵔⵔⵓⴽ ''' ; izina mu [[gifaransa]] : ''Royaume du Maroc'' ) n’[[igihugu]] muri [[Afurika]]. [[Umurwa]] mukuru wa Maroke witwa [[Rabat]].
 
 [[Category:Maroke| ]]
 [[Category:Afurika]]
