*Empty MediaWiki Message*

--- a/Liyeshitensiteyine.mw
+++ b/Liyeshitensiteyine.mw
@@ -1,8 +1,9 @@
 [[File:Flag of Liechtenstein.svg|thumb|250px|<font color="grey">Ibendera rya Liyeshitensiteyine</font>]]
 [[File:Location Liechtenstein Europe.png|thumb|250px|<font color="grey">Ikarita ya Liyeshitensiteyine</font>]]
 
-'''Liyeshitensiteyine''' (izina mu [[gidage]] : ''Fürstentum Liechtenstein'' ) n’[[igihugu]] mu [[Burayi]].
+'''Liyeshitensiteyine''' (izina mu [[gidage]] : ''Fürstentum Liechtenstein'' ) n’[[igihugu]] mu [[Burayi]]. [[Umurwa]] mukuru wa Liyeshitensiteyine witwa [[Vaduz]].
 
+[[Category:Liyeshitensiteyine| ]]
 [[Category:Uburayi]]
 [[Category:Ibihugu]]
 
