*Empty MediaWiki Message*

--- a/Mikoronesiya.mw
+++ b/Mikoronesiya.mw
@@ -1,8 +1,9 @@
 [[File:Flag of Federated States of Micronesia.svg|thumb|250px|<font color="grey">Ibendera rya Mikoronesiya</font>]]
 [[File:LocationMicronesia.png|thumb|250px|<font color="grey">Ikarita ya Mikoronesiya</font>]]
 
-'''Mikoronesiya''' (izina mu [[cyongereza]] : ''Federated States of Micronesia'' ) n’[[igihugu]] muri [[Oseyaniya]].
+'''Mikoronesiya''' (izina mu [[cyongereza]] : ''Federated States of Micronesia'' ) n’[[igihugu]] muri [[Oseyaniya]]. [[Umurwa]] mukuru wa Mikoronesiya witwa [[Palikir]].
 
+[[Category:Mikoronesiya]]
 [[Category:Oseyaniya]]
 [[Category:Ibihugu]]
 
