*Empty MediaWiki Message*

--- a/Tanzaniya.mw
+++ b/Tanzaniya.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Tanzania.svg|thumb|250px|<font color="grey">Ibendera rya Tanzaniya</font>]]
 [[File:LocationTanzania.svg|thumb|250px|<font color="grey">Ikarita ya Tanzaniya</font>]]
 
-'''Tanzaniya''' (izina mu [[giswayili]] : ''Jamhuri ya Muungano wa Tanzania'' ; izina mu [[cyongereza]] : ''United Republic of Tanzania'' ) n’[[igihugu]] muri [[Afurika]] y'iburasirazuba. Indimi nkuru za Tanzaniya ni [[igiswahiri]] n'[[icyongereza]].
+'''Tanzaniya''' (izina mu [[giswayili]] : ''Jamhuri ya Muungano wa Tanzania'' ; izina mu [[cyongereza]] : ''United Republic of Tanzania'' ) n’[[igihugu]] muri [[Afurika]] y'iburasirazuba. [[Umurwa]] mukuru wa Tanzaniya witwa [[Dodoma]]. Indimi nkuru za Tanzaniya ni [[igiswahiri]] n'[[icyongereza]]. 
   
 
 == ==
