*Empty MediaWiki Message*

--- a/Vaduz.mw
+++ b/Vaduz.mw
@@ -1,4 +1,4 @@
-[[File:Vaduz.jpg|thumb|250px|<font color="grey">Amafoto y’umujyi wa Vaduz</font>]]
+[[File:Vaduz.jpg|thumb|250px|<font color="grey">Ifoto y’umujyi wa Vaduz</font>]]
 [[File:Liechtenstein-Vaduz.svg|thumb|250px|<font color="grey">Ikarita ya Vaduz</font>]]
 
 Umujyi wa '''Vaduz''' (izina mu [[gidage]] : ''Vaduz'' ; IPA [faˈduːts]) n’[[umurwa]] mukuru wa [[Liyeshitensiteyine]].
