*Empty MediaWiki Message*

--- a/Eritereya.mw
+++ b/Eritereya.mw
@@ -3,6 +3,7 @@
 
 '''Eritereya''' (izina mu [[gitigirinya]] : '''ኤርትራ''' cyangwa '''ሃገረ ኤርትራ''' ; izina mu [[cyarabu]] '''إرتريا''' cyangwa '''دولة إرتريا''' : ; izina mu [[cyongereza]] : ''Eritrea'' cyangwa ''State of Eritrea'' ) n’[[igihugu]] muri [[Afurika]].
 
+[[Category:Eritereya| ]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
