*Empty MediaWiki Message*

--- a/Eritereya.mw
+++ b/Eritereya.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Eritrea.svg|thumb|250px|<font color="grey">Ibendera ry’Eritereya</font>]]
 [[File:Eritrea (Africa orthographic projection).svg|thumb|250px|<font color="grey">Ikarita y’Eritereya</font>]]
 
-'''Eritereya''' (izina mu [[gitigirinya]] : '''ኤርትራ''' cyangwa '''ሃገረ ኤርትራ''' ; izina mu [[cyarabu]] '''إرتريا''' cyangwa '''دولة إرتريا''' : ; izina mu [[cyongereza]] : ''Eritrea'' cyangwa ''State of Eritrea'' ) n’[[igihugu]] muri [[Afurika]].
+'''Eritereya''' (izina mu [[gitigirinya]] : '''ኤርትራ''' cyangwa '''ሃገረ ኤርትራ''' ; izina mu [[cyarabu]] '''إرتريا''' cyangwa '''دولة إرتريا''' : ; izina mu [[cyongereza]] : ''Eritrea'' cyangwa ''State of Eritrea'' ) n’[[igihugu]] muri [[Afurika]]. [[Umurwa]] mukuru w’u Eritereya witwa [[Asmara]].
 
 [[Category:Eritereya| ]]
 [[Category:Afurika]]
