*Empty MediaWiki Message*

--- a/Tuvalu.mw
+++ b/Tuvalu.mw
@@ -1,8 +1,9 @@
 [[File:Flag of Tuvalu.svg|thumb|250px|<font color="grey">Ibendera rya Tuvalu</font>]]
 [[File:LocationTuvalu.png|thumb|250px|<font color="grey">Ikarita ya Tuvalu</font>]]
 
-'''Tuvalu''' (izina mu [[gituvalu]] na [[cyongereza]] : ''Tuvalu'' ) n’[[igihugu]] muri [[Oseyaniya]].
+'''Tuvalu''' (izina mu [[gituvalu]] na [[cyongereza]] : ''Tuvalu'' ) n’[[igihugu]] muri [[Oseyaniya]]. [[Umurwa]] mukuru wa Tuvalu witwa [[Funafuti]].
 
+[[Category:Tuvalu| ]]
 [[Category:Oseyaniya]]
 [[Category:Ibihugu]]
 
