--- a/Botswana.mw
+++ b/Botswana.mw
@@ -1,8 +1,9 @@
 [[File:Flag of Botswana.svg|thumb|250px|<font color="grey">Ibendera rya Botswana</font>]]
 [[File:LocationBotswana.svg|thumb|250px|<font color="grey">Ikarita ya Botswana</font>]]
 
-'''Botswana''' cyangwa '''Repubulika ya Botswana''' (izina mu [[gitswana ]] : ''Lefatshe la Botswana'' ; izina mu [[cyongereza]] : ''Republic of Botswana '' ) n’[[igihugu]] muri [[Afurika]].
+'''Botswana''' cyangwa '''Repubulika ya Botswana''' (izina mu [[gitswana ]] : ''Lefatshe la Botswana'' ; izina mu [[cyongereza]] : ''Republic of Botswana '' ) n’[[igihugu]] muri [[Afurika]]. [[Umurwa]] mukuru wa Botswana witwa [[Gaborone]].
 
+[[Category:Botswana| ]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
