*Empty MediaWiki Message*

--- a/Zimbabwe.mw
+++ b/Zimbabwe.mw
@@ -1,8 +1,9 @@
 [[File:Flag of Zimbabwe.svg|thumb|250px|<font color="grey">Ibendera rya Zimbabwe</font>]]
 [[File:Zimbabwe (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Zimbabwe</font>]]
 
-'''Zimbabwe''' (izina mu [[cyongereza]], [[gishona]] na [[kindebele]] amajyaruguru : ''Zimbabwe'' ) n’[[igihugu]] muri [[Afurika]].
+'''Zimbabwe''' (izina mu [[cyongereza]], [[gishona]] na [[kindebele]] amajyaruguru : ''Zimbabwe'' ) n’[[igihugu]] muri [[Afurika]]. [[Umurwa]] mukuru wa Zimbabwe witwa [[Harare]].
 
+[[Category:Zimbabwe| ]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
