*Empty MediaWiki Message*

--- a/Harare.mw
+++ b/Harare.mw
@@ -1,6 +1,5 @@
-[[File:Harare Skyline.jpg|thumb|250px|<font color="grey">Ifoto y’umujyi wa Harare</font>]]
 [[File:Eastgate Centre, Harare, Zimbabwe.jpg|thumb|250px|<font color="grey">Ifoto y’umujyi wa Harare</font>]]
-
+[[File:First Street, Harare, Zimbabwe.jpg|thumb|250px|<font color="grey">Ifoto y’umujyi wa Harare</font>]]
 
 [[Umujyi]] wa '''Harare''' n’[[umurwa]] mukuru wa [[Zimbabwe]].
 
