*Empty MediaWiki Message*

--- a/Kiba.mw
+++ b/Kiba.mw
@@ -1,8 +1,9 @@
 [[File:Flag of Cuba.svg|thumb|250px|<font color="grey">Ibendera rya Kiba</font>]]
 [[File:LocationCuba.svg|thumb|250px|<font color="grey">Ikarita ya Kiba</font>]]
 
-'''Kiba''' (izina mu [[cyesipanyole]] : ''República de Cuba'' ) n’[[igihugu]] muri [[Amerika]].
+'''Kiba''' (izina mu [[cyesipanyole]] : ''República de Cuba'' ) n’[[igihugu]] muri [[Amerika]]. [[Umurwa]] mukuru wa Kiba witwa [[Havana]].
 
+[[Category:Kiba| ]]
 [[Category:Amerika]]
 [[Category:Ibihugu]]
 
