*Empty MediaWiki Message*

--- a/Havana.mw
+++ b/Havana.mw
@@ -1,7 +1,7 @@
 [[File:HavanaMontage.png|thumb|250px|<font color="grey">Amafoto y’umujyi wa Havana</font>]]
 [[File:LocationHavana.png|thumb|250px|<font color="grey">Ikarita ya Havana</font>]]
 
-[[Umujyi]] wa '''Havana''' (izina mu [[cyesipanyole]] : ''La Habana'' )
+[[Umujyi]] wa '''Havana''' (izina mu [[cyesipanyole]] : ''La Habana'' ) n’[[umurwa]] mukuru wa [[Kiba]].
 
 [[Category:Kiba]]
 [[Category:Imirwa]] 
