--- a/Indonesiya.mw
+++ b/Indonesiya.mw
@@ -1,9 +1,9 @@
 [[File:Flag of Indonesia.svg|thumb|250px|<font color="grey">Ibendera ry’Indonesiya</font>]]
 [[File:Indonesia (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita y’Indonesiya</font>]]
 
-'''Indonesiya''' (izina mu [[kinyendonisiya]] : ''Indonesia'' cyangwa ''Republik Indonesia'' ) n’[[igihugu]] muri [[Aziya]].
+'''Indonesiya''' (izina mu [[kinyendonisiya]] : ''Indonesia'' cyangwa ''Republik Indonesia'' ) n’[[igihugu]] muri [[Aziya]]. [[Umurwa]] mukuru w’Indonesiya witwa [[Jakarta]].
 
-[[Category:Indonesiya]]
+[[Category:Indonesiya| ]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
