*Empty MediaWiki Message*

--- a/Peru.mw
+++ b/Peru.mw
@@ -1,8 +1,9 @@
 [[File:Flag of Peru.svg|thumb|250px|<font color="grey">Ibendera rya Peru</font>]]
 [[File:Peru (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Peru</font>]]
 
-'''Peru''' (izina mu [[cyesipanyole]] : ''República del Perú  '' ) n’[[igihugu]] muri [[Amerika]].
+'''Peru''' (izina mu [[cyesipanyole]] : ''República del Perú  '' ) n’[[igihugu]] muri [[Amerika]]. [[Umurwa]] mukuru wa Peru witwa [[Lima]].
 
+[[Category:Peru| ]]
 [[Category:Amerika]]
 [[Category:Ibihugu]]
 
