*Empty MediaWiki Message*

--- a/Zambiya.mw
+++ b/Zambiya.mw
@@ -1,8 +1,9 @@
 [[File:Flag of Zambia.svg|thumb|250px|<font color="grey">Ibendera rya Zambiya</font>]]
 [[File:LocationZambia.svg|thumb|250px|<font color="grey">Ikarita ya Zambiya</font>]]
 
-'''Zambiya''' (izina mu [[cyongereza]] : ''Zambia'' ) n’[[igihugu]] muri [[Afurika]].
+'''Zambiya''' (izina mu [[cyongereza]] : ''Zambia'' ) n’[[igihugu]] muri [[Afurika]]. [[Umurwa]] mukuru wa Zambiya witwa [[Lusaka]].
 
+[[Category:Zambiya| ]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
