*Empty MediaWiki Message*

--- a/Ibirwa_bya_Marishali.mw
+++ b/Ibirwa_bya_Marishali.mw
@@ -1,8 +1,9 @@
 [[File:Flag of the Marshall Islands.svg|thumb|250px|<font color="grey">Ibendera ry’Ibirwa bya Marishali</font>]]
 [[File:LocationMarshallIslands.png|thumb|250px|<font color="grey">Ikarita y’Ibirwa bya Marishali</font>]]
 
-'''Ibirwa bya Marishali''' (izina mu [[cyongereza]] : ''Marshall Islands'' cyangwa ''Republic of the Marshall Islands'' ; izina mu [[kimarishali]] : ''Aolepān Aorōkin M̧ajeļ'') n’[[igihugu]] muri [[Oseyaniya]].
+'''Ibirwa bya Marishali''' (izina mu [[cyongereza]] : ''Marshall Islands'' cyangwa ''Republic of the Marshall Islands'' ; izina mu [[kimarishali]] : ''Aolepān Aorōkin M̧ajeļ'') n’[[igihugu]] muri [[Oseyaniya]]. [[Umurwa]] mukuru w’Ibirwa bya Marishali witwa [[Majuro]].
 
+[[Category:Ibirwa bya Marishali| ]]
 [[Category:Oseyaniya]]
 [[Category:Ibihugu]]
 
