*Empty MediaWiki Message*

--- a/Gineya_Ekwatoriyale.mw
+++ b/Gineya_Ekwatoriyale.mw
@@ -1,8 +1,9 @@
 [[File:Flag of Equatorial Guinea.svg|thumb|250px|<font color="grey">Ibendera rya Gineya Ekwatoriyale</font>]]
 [[File:Location Equatorial Guinea AU Africa.svg|thumb|250px|<font color="grey">Ikarita ya Gineya Ekwatoriyale</font>]]
 
-'''Gineya Ekwatoriyale''' (izina mu [[cyesipanyole]] : ''República de Guinea Ecuatorial'' ; izina mu [[gifaransa]] : ''République de Guinée Équatoriale'' ) n’[[igihugu]] muri [[Afurika]].
+'''Gineya Ekwatoriyale''' (izina mu [[cyesipanyole]] : ''República de Guinea Ecuatorial'' ; izina mu [[gifaransa]] : ''République de Guinée Équatoriale'' ) n’[[igihugu]] muri [[Afurika]]. [[Umurwa]] mukuru wa Gineya Ekwatoriyale witwa [[Malabo]].
 
+[[Category:Gineya Ekwatoriyale| ]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
