*Empty MediaWiki Message*

--- a/Malabo.mw
+++ b/Malabo.mw
@@ -1,4 +1,4 @@
-[[File:Malabo a 13-oct-01.jpg|thumb|250px|<font color="grey">Amafoto y’umujyi wa Malabo</font>]]
+[[File:Malabo a 13-oct-01.jpg|thumb|250px|<font color="grey">Ifoto y’umujyi wa Malabo</font>]]
 [[File:Bioko.png|thumb|250px|<font color="grey">Ikarita ya Malabo</font>]]
 
 [[Umujyi]] wa '''Malabo''' n’[[umurwa]] mukuru wa [[Gineya Ekwatoriyale]].
