*Empty MediaWiki Message*

--- a/Malidivezi.mw
+++ b/Malidivezi.mw
@@ -1,8 +1,9 @@
 [[File:Flag of Maldives.svg|thumb|250px|<font color="grey">Ibendera rya Malidivezi</font>]]
 [[File:LocationMaldives.png|thumb|250px|<font color="grey">Ikarita ya Malidivezi</font>]]
 
-'''Malidivezi''' (izina mu [[kimaldivezi]] : '''ދިވެހިރާއްޖެ ''' cyangwa '''ދިވެހިރާއްޖޭގެ ޖުމްހޫރިއްޔާ ''') n’[[igihugu]] muri [[Aziya]].
+'''Malidivezi''' (izina mu [[kimaldivezi]] : '''ދިވެހިރާއްޖެ ''' cyangwa '''ދިވެހިރާއްޖޭގެ ޖުމްހޫރިއްޔާ ''') n’[[igihugu]] muri [[Aziya]]. [[Umurwa]] mukuru wa Malidivezi witwa [[Malé]].
 
+[[Category:Malidivezi| ]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
