*Empty MediaWiki Message*

--- a/Malé.mw
+++ b/Malé.mw
@@ -1,5 +1,5 @@
 [[File:Malé harbour aerial.jpg|thumb|250px|<font color="grey">Ifoto y’umujyi wa Malé</font>]]
-[[File:Male maldives skyline.jpg|thumb|250px|<font color="grey">Ifoto y’umujyi wa Malé</font>]]
+[[File:Malé Mosque.JPG|thumb|250px|<font color="grey">Umusigiti wa Malé</font>]]
 
 [[Umujyi]] wa '''Malé''' (izina mu [[kimaldivezi]] : '''މާލެ ''' ) n’[[umurwa]] mukuru wa [[Malidivezi]].
 
