*Empty MediaWiki Message*

--- a/Nikaragwa.mw
+++ b/Nikaragwa.mw
@@ -1,8 +1,9 @@
 [[File:Flag of Nicaragua.svg|thumb|250px|<font color="grey">Ibendera rya Nikaragwa</font>]]
 [[File:Nicaragua (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Nikaragwa</font>]]
 
-'''Nikaragwa''' (izina mu [[cyesipanyole]] : ''República de Nicaragua  '' ) n’[[igihugu]] muri [[Amerika]].
+'''Nikaragwa''' (izina mu [[cyesipanyole]] : ''República de Nicaragua  '' ) n’[[igihugu]] muri [[Amerika]]. [[Umurwa]] mukuru wa Nikaragwa witwa [[Managua]].
 
+[[Category:Nikaragwa| ]]
 [[Category:Amerika]]
 [[Category:Ibihugu]]
 
