*Empty MediaWiki Message*

--- a/Managua.mw
+++ b/Managua.mw
@@ -1,4 +1,4 @@
-[[File:Carretera a Masaya.jpg|thumb|250px|<font color="grey">Ifoto y’umujyi wa Managua</font>]]
+[[File:Managua Landscape.jpg|thumb|250px|<font color="grey">Ifoto y’umujyi wa Managua</font>]]
 [[File:Managua Department with Managua highlighted.svg|thumb|250px|<font color="grey">Ikarita ya Managua</font>]]
 
 [[Umujyi]] wa '''Managua''' n’[[umurwa]] mukuru wa [[Nikaragwa]].
