*Empty MediaWiki Message*

--- a/Bahirayini.mw
+++ b/Bahirayini.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Bahrain.svg|thumb|250px|<font color="grey">Ibendera rya Bahirayini</font>]]
 [[File:Map of Bahrain.svg|thumb|250px|<font color="grey">Ikarita ya Bahirayini</font>]]
 
-'''Bahirayini''' (izina mu [[cyarabu]] : '''مملكة البحرين‎''' ) n’[[igihugu]] muri [[Aziya]].
+'''Bahirayini''' (izina mu [[cyarabu]] : '''مملكة البحرين‎''' ) n’[[igihugu]] muri [[Aziya]]. [[Umurwa]] mukuru wa Bahirayini witwa [[Manama]].
 
 [[Category:Bahirayini]]
 [[Category:Aziya]]
