*Empty MediaWiki Message*

--- a/Manila.mw
+++ b/Manila.mw
@@ -1,7 +1,111 @@
-[[File:Manila Infobox Pic Montage.jpg|thumb|250px|<font color="grey">Amafoto y’umujyi wa Manila</font>]]
+[[File:Manila by the bay.jpg|thumb|250px|<font color="grey">Amafoto y’umujyi wa Manila</font>]]
 [[File:Ph locator ncr manila.png|thumb|250px|<font color="grey">Ikarita ya Manila</font>]]
 
 [[Umujyi]] wa '''Manila''' (izina mu [[cyongereza]] : ''City of Manila'' ; izina mu [[gitagaloge]] : ''Lungsod ng Maynila'' )
 
 [[Category:Filipine]]
 [[Category:Imirwa]]
+
+[[ace:Manila]]
+[[af:Manila]]
+[[am:ማኒላ]]
+[[ar:مانيلا]]
+[[an:Manila]]
+[[az:Manila]]
+[[bn:ম্যানিলা]]
+[[zh-min-nan:Manila]]
+[[be:Горад Маніла]]
+[[be-x-old:Маніла]]
+[[bcl:Manila]]
+[[bo:མ་ནི་ལ།]]
+[[bs:Manila]]
+[[br:Manila]]
+[[bg:Манила]]
+[[ca:Manila]]
+[[ceb:Dakbayan sa Manila]]
+[[cs:Manila]]
+[[cbk-zam:Ciudad de Manila]]
+[[cy:Manila]]
+[[da:Manila]]
+[[de:Manila]]
+[[et:Manila]]
+[[el:Μανίλα]]
+[[es:Manila]]
+[[eo:Manilo]]
+[[eu:Manila]]
+[[fa:مانیل]]
+[[hif:Manila]]
+[[fo:Manila]]
+[[fr:Manille]]
+[[ga:Mainile]]
+[[gd:Manila]]
+[[gl:Manila]]
+[[ko:마닐라]]
+[[hi:मनीला]]
+[[hr:Manila]]
+[[io:Manila]]
+[[ilo:Manila]]
+[[id:Manila]]
+[[ia:Manila]]
+[[os:Манилæ]]
+[[is:Maníla]]
+[[it:Manila]]
+[[he:מנילה]]
+[[jv:Manila]]
+[[kn:ಮನಿಲ]]
+[[pam:Menila]]
+[[ka:მანილა]]
+[[sw:Manila]]
+[[ht:Manyl]]
+[[la:Manila]]
+[[lv:Manila]]
+[[lb:Manila]]
+[[lt:Manila]]
+[[lmo:Manila]]
+[[hu:Manila]]
+[[mk:Манила]]
+[[mr:मनिला]]
+[[arz:مانيلا]]
+[[ms:Manila]]
+[[mwl:Manila]]
+[[nah:Manillah]]
+[[fj:Manila]]
+[[nl:Manilla]]
+[[ja:マニラ]]
+[[no:Manila]]
+[[nn:Manila]]
+[[nov:Manila]]
+[[oc:Manila]]
+[[uz:Manila]]
+[[pms:Manila]]
+[[pl:Manila]]
+[[pt:Manila]]
+[[crh:Manila]]
+[[ro:Manila]]
+[[qu:Manila]]
+[[ru:Манила]]
+[[sah:Манила]]
+[[sco:Manila]]
+[[sq:Manila]]
+[[scn:Manila]]
+[[simple:Manila]]
+[[sk:Manila]]
+[[sl:Manila]]
+[[sr:Манила]]
+[[sh:Manila]]
+[[fi:Manila]]
+[[sv:Manila]]
+[[tl:Maynila]]
+[[ta:மணிலா]]
+[[th:มะนิลา]]
+[[tg:Манила]]
+[[tr:Manila]]
+[[uk:Маніла]]
+[[ug:مانىلا]]
+[[vi:Manila]]
+[[vo:Maynila]]
+[[fiu-vro:Manila]]
+[[war:Manila]]
+[[yo:Manila]]
+[[zh-yue:馬尼拉]]
+[[zh:马尼拉]]
