--- a/Manila.mw
+++ b/Manila.mw
@@ -1,4 +1,4 @@
-[[File:Manila by the bay.jpg|thumb|250px|<font color="grey">Amafoto y’umujyi wa Manila</font>]]
+[[File:Manila by the bay.jpg|thumb|250px|<font color="grey">Ifoto y’umujyi wa Manila</font>]]
 [[File:Ph locator ncr manila.png|thumb|250px|<font color="grey">Ikarita ya Manila</font>]]
 
 [[Umujyi]] wa '''Manila''' (izina mu [[cyongereza]] : ''City of Manila'' ; izina mu [[gitagaloge]] : ''Lungsod ng Maynila'' )
