*Empty MediaWiki Message*

--- a/Manila.mw
+++ b/Manila.mw
@@ -1,7 +1,7 @@
 [[File:Manila by the bay.jpg|thumb|250px|<font color="grey">Ifoto y’umujyi wa Manila</font>]]
 [[File:Ph locator ncr manila.png|thumb|250px|<font color="grey">Ikarita ya Manila</font>]]
 
-[[Umujyi]] wa '''Manila''' (izina mu [[cyongereza]] : ''City of Manila'' ; izina mu [[gitagaloge]] : ''Lungsod ng Maynila'' )
+[[Umujyi]] wa '''Manila''' (izina mu [[cyongereza]] : ''City of Manila'' ; izina mu [[gitagaloge]] : ''Lungsod ng Maynila'' ) n’[[umurwa]] mukuru wa [[Filipine]].
 
 [[Category:Filipine]]
 [[Category:Imirwa]]
