*Empty MediaWiki Message*

--- a/Mozambike.mw
+++ b/Mozambike.mw
@@ -1,8 +1,9 @@
 [[File:Flag of Mozambique.svg|thumb|250px|<font color="grey">Ibendera rya Mozambike</font>]]
 [[File:Location Mozambique AU Africa.svg|thumb|250px|<font color="grey">Ikarita ya Mozambike</font>]]
 
-'''Mozambike''' (izina mu [[giporutigali]] : ''República de Moçambique'' ) n’[[igihugu]] muri [[Afurika]].
+'''Mozambike''' (izina mu [[giporutigali]] : ''República de Moçambique'' ) n’[[igihugu]] muri [[Afurika]]. [[Umurwa]] mukuru wa Mozambike witwa [[Maputo]].
 
+[[Category:Mozambike| ]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
