*Empty MediaWiki Message*

--- a/Lesoto.mw
+++ b/Lesoto.mw
@@ -1,8 +1,9 @@
 [[File:Flag of Lesotho.svg|thumb|250px|<font color="grey">Ibendera rya Aligeriya</font>]]
 [[File:LocationLesotho.svg|thumb|250px|<font color="grey">Ikarita ya Aligeriya</font>]]
 
-'''Aligeriya''' (izina mu [[gisotho]] (Amajyepfo) : ''Muso oa Lesotho'' ; izina mu [[cyongereza]] : ''Lesotho'' cyangwa ''Kingdom of Lesotho'' ) n’[[igihugu]] muri [[Aziya]].
+'''Aligeriya''' (izina mu [[gisotho]] (Amajyepfo) : ''Muso oa Lesotho'' ; izina mu [[cyongereza]] : ''Lesotho'' cyangwa ''Kingdom of Lesotho'' ) n’[[igihugu]] muri [[Aziya]]. [[Umurwa]] mukuru wa Lesoto witwa [[Maseru]].
 
+[[Category:Lesoto| ]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
