*Empty MediaWiki Message*

--- a/Walisi_na_Fatuna.mw
+++ b/Walisi_na_Fatuna.mw
@@ -1,7 +1,8 @@
 [[File:LocationWallisAndFutuna.png|thumb|250px|<font color="grey">Ikarita ya Walisi na Fatuna</font>]]
 
-'''Walisi na Fatuna''' (izina mu [[gifaransa]] : ''Wallis et Futuna'' cyangwa ''Territoire des îles Wallis et Futuna'') n’[[igihugu]] muri [[Oseyaniya]].
+'''Walisi na Fatuna''' (izina mu [[gifaransa]] : ''Wallis et Futuna'' cyangwa ''Territoire des îles Wallis et Futuna'') n’[[igihugu]] muri [[Oseyaniya]]. [[Umurwa]] mukuru wa Walisi na Fatuna witwa [[Mata-Utu]].
 
+[[Category:Walisi na Fatuna| ]]
 [[Category:Oseyaniya]]
 [[Category:Ibihugu]]
 
