*Empty MediaWiki Message*

--- a/Igiceceni.mw
+++ b/Igiceceni.mw
@@ -1,6 +1,6 @@
 [[File:Chechnya and Caucasus.png|thumb|250px|<font color="grey">Ikarita ya Ceceniya</font>]]
 
-'''Igiceceni''' (izina mu igiceceni: ''Нохчийн мотт'' cyangwa ''Noxçiyn mott'') ni [[ururimi]] rw’[[abaceceni]] na rwa [[Ceceniya]]. 
+'''Igiceceni''' (izina mu giceceni: ''Нохчийн мотт'' cyangwa ''Noxçiyn mott'') ni [[ururimi]] rw’[[abaceceni]] na rwa [[Ceceniya]]. 
 
 == umugereka – ubuke ==
  
