/* Amagambo n'interuro mu cyuveya */

--- a/Icyuveya.mw
+++ b/Icyuveya.mw
@@ -6,6 +6,12 @@ Ikilazi kigizwe n’inyuguti 16 : a e f g h i k l m n o s t u v '
 :indagi 11 : f g h k l m n s t v '
 
 == Amagambo n'interuro mu cyuveya ==
+* '''Mālō te ma'uli''' – Muraho
+* '''tagata''' – umuntu
+* '''fafine''' – umugore
+* '''matu'ā''' – umubyeyi
+* '''lua''' – rimwe
+* '''tolu''' – kabiri
 
 [[Category:Indimi]]
 
