--- a/Icyuveya.mw
+++ b/Icyuveya.mw
@@ -1,4 +1,4 @@
-'''Icyuveya''' (izina mu icyuveya: ''Fakaʻuvea'') ni [[ururimi]] rwa [[Walisi na Fatuna]]. 
+'''Icyuveya''' (izina mu cyuveya: ''Fakaʻuvea'') ni [[ururimi]] rwa [[Walisi na Fatuna]]. 
 
 == Alfabeti y’icyuveya ==
 Ikilazi kigizwe n’inyuguti 16 : a e f g h i k l m n o s t u v '
