--- a/Icyuveya.mw
+++ b/Icyuveya.mw
@@ -2,7 +2,7 @@
 
 == Alfabeti y’icyuveya ==
 Ikilazi kigizwe n’inyuguti 16 : a e f g h i k l m n o s t u v '
-:inyajwi 5 : a e i o u (na ā ē ī ō ū)
+:inyajwi 5 : a e i o u (''na'' ā ē ī ō ū)
 :indagi 11 : f g h k l m n s t v '
 
 == Amagambo n'interuro mu cyuveya ==
