*Empty MediaWiki Message*

--- a/Mata-Utu.mw
+++ b/Mata-Utu.mw
@@ -1,4 +1,4 @@
-[[File:WF -Wallis.png|thumb|250px|<font color="grey">Ikarita ya Sarudi</font>]]
+[[File:WF -Wallis.png|thumb|250px|<font color="grey">Ikarita ya Mata-Utu</font>]]
 
 [[Umujyi]] wa Mata-Utu (izina mu [[cyuveya]] : ''Matāʻutu'') n’[[umurwa]] mukuru wa [[Walisi na Fatuna]].
 
