*Empty MediaWiki Message*

--- a/Somaliya.mw
+++ b/Somaliya.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Somalia.svg|thumb|250px|<font color="grey">Ibendera rya Somaliya</font>]]
 [[File:Somalia (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Somaliya</font>]]
 
-'''Somaliya''' (izina mu [[gisomali]] : ''Soomaaliya'' cyangwa ''Jamhuuriyadda Soomaaliya'' ; izina mu [[cyarabu]] : '''الصومال''' cyangwa '''جمهورية الصومال‎ ''' ) n’[[igihugu]] muri [[Afurika]].
+'''Somaliya''' (izina mu [[gisomali]] : ''Soomaaliya'' cyangwa ''Jamhuuriyadda Soomaaliya'' ; izina mu [[cyarabu]] : '''الصومال''' cyangwa '''جمهورية الصومال‎ ''' ) n’[[igihugu]] muri [[Afurika]]. [[Umurwa]] mukuru wa Somaliya witwa [[Mogadishu]].
 
 [[Category:Somaliya| ]]
 [[Category:Afurika]]
