*Empty MediaWiki Message*

--- a/Komore.mw
+++ b/Komore.mw
@@ -1,7 +1,7 @@
 [[File:Flag of the Comoros.svg|thumb|250px|<font color="grey">Ibendera rya Komore</font>]]
 [[File:LocationComoros.svg|thumb|250px|<font color="grey">Ikarita ya Komore</font>]]
 
-'''Komore''' (izina mu [[gikomore]] : ''Komori'' ; izina mu [[cyarabu]] : '''الاتّحاد القمُريّ''' ; izina mu [[gifaransa]] : ''Union des Comores'' ) n’[[igihugu]] muri [[Afurika]]. [[Umurwa]] mukuru wa Komore witwa [[Moroni]]..
+'''Komore''' (izina mu [[gikomore]] : ''Komori'' ; izina mu [[cyarabu]] : '''الاتّحاد القمُريّ''' ; izina mu [[gifaransa]] : ''Union des Comores'' ) n’[[igihugu]] muri [[Afurika]]. [[Umurwa]] mukuru wa Komore witwa [[Moroni]].
 
 [[Category:Komore| ]]
 [[Category:Afurika]]
