*Empty MediaWiki Message*

--- a/Goronulande.mw
+++ b/Goronulande.mw
@@ -1,8 +1,9 @@
 [[File:Flag of Greenland.svg|thumb|250px|<font color="grey">Ibendera rya Goronulande</font>]]
 [[File:Greenland (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Goronulande</font>]]
 
-'''Goronulande''' (izina mu [[kinyagurinilande]] : ''Kalaallit Nunaat'' ; izina mu [[kidanwa]] : ''Grønland'' ) n’[[igihugu]] muri [[Amerika]].
+'''Goronulande''' (izina mu [[kinyagurinilande]] : ''Kalaallit Nunaat'' ; izina mu [[kidanwa]] : ''Grønland'' ) n’[[igihugu]] muri [[Amerika]]. [[Umurwa]] mukuru wa Goronulande witwa [[Nuuk]].
 
+[[Category:Goronulande| ]]
 [[Category:Amerika]]
 [[Category:Ibihugu]]
 
