*Empty MediaWiki Message*

--- a/Sofiya.mw
+++ b/Sofiya.mw
@@ -1,6 +1,6 @@
 [[File:Sofia Collage TB.png|thumb|250px|<font color="grey">Amafoto y’umujyi wa Sofiya</font>]]
 
-[[Umujyi wa '''Sofiya''' (izina mu [[kinyabulugariya ]] : ''София'' ) n’[[umurwa]] mukuru wa [[Buligariya]].
+[[Umujyi]] wa '''Sofiya''' (izina mu [[kinyabulugariya ]] : ''София'' ) n’[[umurwa]] mukuru wa [[Buligariya]].
 
 [[Category:Buligariya]]
 [[Category:Imirwa]] 
