*Empty MediaWiki Message*

--- a/Fiji.mw
+++ b/Fiji.mw
@@ -1,8 +1,9 @@
 [[File:Flag of Fiji.svg|thumb|250px|<font color="grey">Ibendera rya Fiji</font>]]
 [[File:FJI orthographic NaturalEarth.svg|thumb|250px|<font color="grey">Ikarita ya Fiji</font>]]
 
-'''Fiji''' (izina mu [[gifijiyani]] : ''Matanitu ko Viti'' cyangwa ''Matanitu Tu-Vaka-i-koya ko Viti''; izina mu [[cyongereza]] : ''Fiji'' cyangwa ''Republic of the Fiji Islands'' ) n’[[igihugu]] muri [[Oseyaniya]].
+'''Fiji''' (izina mu [[gifijiyani]] : ''Matanitu ko Viti'' cyangwa ''Matanitu Tu-Vaka-i-koya ko Viti''; izina mu [[cyongereza]] : ''Fiji'' cyangwa ''Republic of the Fiji Islands'' ) n’[[igihugu]] muri [[Oseyaniya]]. [[Umurwa]] mukuru wa Fiji witwa [[Suva]].
 
+[[Category:Fiji| ]]
 [[Category:Oseyaniya]]
 [[Category:Ibihugu]]
 
