*Empty MediaWiki Message*

--- a/Suva.mw
+++ b/Suva.mw
@@ -1,4 +1,4 @@
-[[File:Suva City, View From Suva Harbour .jpg|thumb|250px|<font color="grey">Ifoto y’umujyi wa Suva</font>]]
+[[File:Suva postcard.jpg|thumb|250px|<font color="grey">Ifoto y’umujyi wa Suva</font>]]
 [[File:Fiji map.png|thumb|250px|<font color="grey">Ikarita ya Suva</font>]]
 
 [[Umujyi]] wa '''Suva''' (izina mu [[gifijiyani]] na [[cyongereza]]: ''Suva'' )
