*Empty MediaWiki Message*

--- a/Suva.mw
+++ b/Suva.mw
@@ -1,7 +1,7 @@
 [[File:Suva postcard.jpg|thumb|250px|<font color="grey">Ifoto y’umujyi wa Suva</font>]]
 [[File:Fiji map.png|thumb|250px|<font color="grey">Ikarita ya Suva</font>]]
 
-[[Umujyi]] wa '''Suva''' (izina mu [[gifijiyani]] na [[cyongereza]]: ''Suva'' ) n’[[umurwa]] mukuru wa [8Fiji]].
+[[Umujyi]] wa '''Suva''' (izina mu [[gifijiyani]] na [[cyongereza]]: ''Suva'' ) n’[[umurwa]] mukuru wa [[Fiji]].
 
 [[Category:Fiji]]
 [[Category:Imirwa]] 
