*Empty MediaWiki Message*

--- a/Tirana.mw
+++ b/Tirana.mw
@@ -1,6 +1,6 @@
 [[File:Collage of views of Tirana.jpg|thumb|250px|<font color="grey">Amafoto y’umujyi wa Tirana</font>]]
 
-[[Umujyi]] wa '''Tirana''' (izina mu [[kinyalubaniya]]: ''Tiranë'' ) n’[[umurwa]] mukuru w’[[Alubaniya]].
+[[Umujyi]] wa '''Tirana''' (izina mu [[cyalubaniya]]: ''Tiranë'' ) n’[[umurwa]] mukuru w’[[Alubaniya]].
 
 [[Category:Alubaniya]]
 [[Category:Imirwa]] 
