*Empty MediaWiki Message*

--- a/Icyuveya.mw
+++ b/Icyuveya.mw
@@ -1,7 +1,7 @@
 '''Icyuveya''' (izina mu cyuveya: ''Fakaʻuvea'') ni [[ururimi]] rwa [[Walisi na Fatuna]]. 
 
 == Alfabeti y’icyuveya ==
-Ikilazi kigizwe n’inyuguti 16 : a e f g h i k l m n o s t u v '
+Icyuveya kigizwe n’inyuguti 16 : a e f g h i k l m n o s t u v '
 :inyajwi 5 : a e i o u (''na'' ā ē ī ō ū)
 :indagi 11 : f g h k l m n s t v '
 
