/* Amagambo n'interuro mu cyuveya */

--- a/Icyuveya.mw
+++ b/Icyuveya.mw
@@ -10,6 +10,10 @@ Icyuveya kigizwe n’inyuguti 16 : a e f g h i k l m n o s t u v '
 * '''tagata''' – umuntu
 * '''fafine''' – umugore
 * '''matu'ā''' – umubyeyi
+* '''fusi''' – igitoke 
+
+== Imibare ==
+
 * '''lua''' – rimwe
 * '''tolu''' – kabiri
 
