--- a/Icyuveya.mw
+++ b/Icyuveya.mw
@@ -13,9 +13,29 @@ Icyuveya kigizwe n’inyuguti 16 : a e f g h i k l m n o s t u v '
 * '''fusi''' – igitoke 
 
 == Imibare ==
+* '''Nūmelo faka’uvea''' – Imibare mu cyuveva
+* '''tahi''' – rimwe
+* '''lua''' – kabiri
+* '''tolu''' – gatatu
+* '''fā''' – kane
+* '''nima''' – gatanu
+* '''ono''' – gatandatu
+* '''fitu''' – karindwi
+* '''valu''' – umunani
+* '''hiva''' – icyenda
+* '''hogofulu''' – icumi
+* '''hogofulu mā tahi''' – cumi na rimwe
+* '''hogofulu mā lua''' – cumi na kaviri
+* '''hogofulu mā tolu''' – clumi na gatatu
+* '''hogofulu mā fā''' – cumi na kane
+* '''hogofulu mā nima''' – cumi na gatanu
+* '''hogofulu mā ono''' – cumi na gatandatu
+* '''hogofulu mā fitu''' – cumi na karindwi
+* '''hogofulu mā valu''' – cumi n’umunani
+* '''hogofulu mā hiva''' – cumi n’icyenda
 
-* '''lua''' – rimwe
-* '''tolu''' – kabiri
+== Imiyoboro ==
+*Dominik Maximilián Ramík, Dictionnaire wallisien, 4. décembre 2010
 
 [[Category:Indimi]]
 
