--- a/Icyuveya.mw
+++ b/Icyuveya.mw
@@ -33,6 +33,28 @@ Icyuveya kigizwe n’inyuguti 16 : a e f g h i k l m n o s t u v '
 * '''hogofulu mā fitu''' – cumi na karindwi
 * '''hogofulu mā valu''' – cumi n’umunani
 * '''hogofulu mā hiva''' – cumi n’icyenda
+* '''uafulu''' – makumyabiri
+* '''uafulu mā tahi''' – makumyabiri na rimwe
+* '''uafulu mā lua''' – makumyabiri na kaviri
+* '''uafulu mā tolu''' – makumyabiri na gatatu
+* '''uafulu mā fā''' – makumyabiri na kane
+* '''uafulu mā nima''' – makumyabiri na gatanu
+* '''uafulu mā ono''' – makumyabiri na gatandatu
+* '''uafulu mā fitu''' – makumyabiri na karindwi
+* '''uafulu mā valu''' – makumyabiri n’umunani
+* '''uafulu mā hiva''' – makumyabiri n’icyenda 
+* '''tolugofunu''' – mirongo itatu
+* '''fagofulu''' – mirongo ine
+* '''nimagofolu''' – mirongo itanu
+* '''onogofulu''' – mirongo itandatu
+* '''fitugofulu''' – mirongo irindwi
+* '''fitugofulu''' – mirongo inani
+* '''hivagofulu''' – mirongo cyenda
+* '''teau''' – ijana
+* '''afe''' – igihumbi
+* '''mano''' – ibihumbi icumi 
+* '''kilu''' – ibihumbi ijana 
+* '''miliona''' – miliyoni
 
 == Imiyoboro ==
 *Dominik Maximilián Ramík, Dictionnaire wallisien, 4. décembre 2010
