--- a/Icyuveya.mw
+++ b/Icyuveya.mw
@@ -26,7 +26,7 @@ Icyuveya kigizwe n’inyuguti 16 : a e f g h i k l m n o s t u v '
 * '''hogofulu''' – icumi
 * '''hogofulu mā tahi''' – cumi na rimwe
 * '''hogofulu mā lua''' – cumi na kaviri
-* '''hogofulu mā tolu''' – clumi na gatatu
+* '''hogofulu mā tolu''' – cumi na gatatu
 * '''hogofulu mā fā''' – cumi na kane
 * '''hogofulu mā nima''' – cumi na gatanu
 * '''hogofulu mā ono''' – cumi na gatandatu
