--- a/Ububiligi.mw
+++ b/Ububiligi.mw
@@ -4,6 +4,9 @@
 
 '''Ububiligi''' cyangwa '''Ububirigi''' , '''Igihugu cy’Ububirigi''' (izina mu [[kinyaholande]] : ''Koninkrijk België'' ; izina mu [[gifaransa]] : ''Royaume de Belgique'' ; izina mu [[gidage]] : ''Königreich Belgien'' ) n’[[igihugu]] mu [[Burayi]].
 
+== ==
+*[[Kongo Mbiligi]]
+
 [[Category:Uburayi]]
 [[Category:Ibihugu]] 
 
