*Empty MediaWiki Message*

--- a/Ububiligi.mw
+++ b/Ububiligi.mw
@@ -5,7 +5,7 @@
 '''Ububiligi''' cyangwa '''Ububirigi''' , '''Igihugu cy’Ububirigi''' (izina mu [[kinyaholande]] : ''Koninkrijk België'' ; izina mu [[gifaransa]] : ''Royaume de Belgique'' ; izina mu [[gidage]] : ''Königreich Belgien'' ) n’[[igihugu]] mu [[Burayi]].
 
 == ==
-*[[Kongo Mbiligi]]
+*[[Kongo mbiligi]]
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]] 
