*Empty MediaWiki Message*

--- a/Ikilatini.mw
+++ b/Ikilatini.mw
@@ -1,6 +1,6 @@
 [[File:Rome Colosseum inscription 2.jpg|thumb|250px|<font color="green"> Ikilatini</font>]]
 
-'''Ikilatini''' (izina mu kilatini ''Lingua Latīna'') ni [[ururimi]] rwa kera zo mu [[Burayi]].
+'''Ikilatini''' (izina mu kilatini ''Lingua Latīna'') ni [[ururimi]] rwa kera zo mu [[Burayi]]. [[Abagatolika]] bazi ko ikilatini ari rwo rurimi rwera.
 
 == Alfabeti ya Kilatini ==
 
