*Empty MediaWiki Message*

--- a/Icyarabu.mw
+++ b/Icyarabu.mw
@@ -5,4 +5,23 @@
 
 [[Abaisilamu]] bazi ko icyarabu ari rwo rurimi rwera.
 
+== Amagambo n'interuro mu cyarabu ==
+
+* '''مرحبًا''' – Muraho
+* '''أهلا''' – Murakaza neza 
+
+* '''نعم''' – Yego
+* '''لا''' – Oya
+
+*'''واحد''' – rimwe
+*'''اثنان''' – kabiri
+*'''ثلاثة''' – gatatu
+*'''أربعة''' – kane
+*'''خمسة''' – gatanu
+*'''ستة''' – gatandatu
+*'''سبعة''' – karindwi
+*'''ثمانية''' – umunani
+*'''تسعة''' – icyenda
+
+
 [[Category:Indimi]]
