/* Amagambo n'interuro mu cyarabu */

--- a/Icyarabu.mw
+++ b/Icyarabu.mw
@@ -23,5 +23,14 @@
 *'''ثمانية''' – umunani
 *'''تسعة''' – icyenda
 
+== Alfabeti y’icyarabu ==
+
+<center>
+{| class="wikitable" style="text-align:center;font-size:200%;"
+|-
+|[[Ye (harf)|ي]]||[[He (harf)|ه]] ||[[Vav (harf)|و]]||[[Nun (harf)|ن]] ||[[Mim (harf)|م]]||[[Lam (harf)|ل]]||[[Kef (harf)|ك]]||[[Kaf (harf)|ق]]||[[Fe (harf)|ف]]||[[Ğayn (harf)|غ]]||[[Ayn (harf)|ع]]||[[Zı (harf)|ظ]]||[[Tı (harf)|ط]]||[[Dad (harf)|ض‎]]|||[[Sad (harf)|ص]]||[[Şin (harf)|ش]]||[[Sin (harf)|س]]||[[Ze (harf)|ز]]||[[Ra (harf)|ر]]||[[Zel (harf)|ذ]]||[[Dal (harf)|د]]||[[Hı (harf)|خ]]||[[Ha (harf)|ح]]||[[Cim (harf)|ج]]||[[Se (harf)|ث]]||[[Te (harf)|ت]]||[[Be|ب]]||[[Elif (harf)|ﺍ]] 
+|}
+</center>
+
 
 [[Category:Indimi]]
